welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: illegal start of simple expression
}else if  ((a<=19 && a>=13) || (b<=19 && b>=13))) {
                                                ^